Fixing spacing issues with Donation header

--- a/public/stylesheets/sass/store.sass
+++ b/public/stylesheets/sass/store.sass
@@ -40,7 +40,6 @@ h4
   margin-bottom: .5em
 
 .event-venue
-  color: #666
   font-size: 1em
   margin-bottom: .5em
   
@@ -65,12 +64,15 @@ h4
     line-height: 2 * $line_height
   .key, .value
     display: inline-block
-    color: #666
   .key
     font-weight: bold
     width: 30%
 
 #donation
+  h2
+    margin-bottom: 12px
+  p
+    margin-bottom: 5px
   input[type="text"]
     width: 50%
   input[type="submit"]
